# boost_channels

./: .clang-format  CMakeLists.txt  README.md
examples/: CMakeLists.txt  cross-threads.cpp  intro.cpp  multi-consumer-tie.cpp  multi-consumer.cpp
include/boost/: channels.hpp
include/boost/channels/: channel.hpp  channel_consumer.hpp  channel_producer.hpp  config.hpp  error_code.hpp  null_mutex.hpp  scope_exit.hpp  tie.hpp
include/boost/channels/concepts/: boolean_testable.hpp  convertible_to.hpp  equality_comparable.hpp  executor.hpp  same_as.hpp  select_handler.hpp  selectable_op.hpp  std_lockable.hpp
include/boost/channels/detail/: channel_consume_op.hpp  channel_impl.hpp  channel_send_op.hpp  consume_op_interface.hpp  consumer_op_function.hpp  free_deleter.hpp  implement_channel_queue.hpp  io_op_interface_base.hpp  lock.hpp  postit.hpp  produce_op_interface.hpp  producer_op_function.hpp  select_state.hpp  select_state_base.hpp  select_wait_op.hpp  shared_consume_op.hpp  shared_produce_op.hpp  value_buffer.hpp
include/boost/channels/impl/: channel.hpp
test/: CMakeLists.txt  test_consume_if.cpp  test_consume_op.cpp  test_main.cpp  test_select.cpp  test_self_contained.cpp.in
